--- a/src/components/Navigation.html
+++ b/src/components/Navigation.html
@@ -17,6 +17,7 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#/login">Sign in</a>
         <a class="nav-link" href="#/signup">Sign up</a>
       </li>
     </ul>
