--- a/src/components/Login.html
+++ b/src/components/Login.html
@@ -3,27 +3,28 @@
     <div class="row">
 
       <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center">Sign up</h1>
+        <h1 class="text-xs-center">Sign in</h1>
         <p class="text-xs-center">
-        <a href="">Have an account?</a>
+          <a href="#/register">Need an account?</a>
         </p>
 
+        {{#if errors}}
         <ul class="error-messages">
-          <li>That email is already taken</li>
+          {{#each errors as error}}
+            <li>Hey we have an error</li>
+          {{/each}}
         </ul>
+        {{/if}}
 
-        <form>
+        <form on:submit='login(event, email, password)'>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Your Name">
+            <input bind:value="email" class="form-control form-control-lg" type="text" placeholder="Email">
           </fieldset>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Email">
-          </fieldset>
-          <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="password" placeholder="Password">
+            <input bind:value="password" class="form-control form-control-lg" type="password" placeholder="Password">
           </fieldset>
           <button class="btn btn-lg btn-primary pull-xs-right">
-            Sign up
+            Sign in
           </button>
         </form>
       </div>
@@ -31,3 +32,27 @@
     </div>
   </div>
 </div>
+
+<script>
+  export default {
+    oncreate() {
+      console.log(this.get('errors'));
+      this.observe('errors', error => {
+        console.log('errors', error);
+      });
+    },
+    data() {
+      return {
+        email: '',
+        password: '',
+        errors: null
+      };
+    },
+    methods: {
+      login(e, email, password) {
+        e.preventDefault();
+        this.fire('login', {email, password});
+      }
+    }
+  }
+</script>
