--- a/src/components/Navigation.html
+++ b/src/components/Navigation.html
@@ -3,9 +3,10 @@
     <a class="navbar-brand" href="index.html">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
       <!-- Add "active" class when you're on that page" -->
-      <li class="nav-item active">
-        <a class="nav-link" href="#/">Home</a>
+      <li class="nav-item">
+        <a class="nav-link active" href="#/">Home</a>
       </li>
+      {{#if isLoggedIn}}
       <li class="nav-item">
         <a class="nav-link" href="#/create">
           <i class="ion-compose"></i>&nbsp;New Post
@@ -16,11 +17,22 @@
           <i class="ion-gear-a"></i>&nbsp;Settings
         </a>
       </li>
+      {{else}}
       <li class="nav-item">
         <a class="nav-link" href="#/login">Sign in</a>
-        <a class="nav-link" href="#/signup">Sign up</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#/register">Sign up</a>
+      </li>
+      {{/if}}
     </ul>
   </div>
 </nav>
 
+<script>
+  export default {
+    onrender() {
+      // console.log(this.get('user'));
+    }
+  }
+</script>
